--- a/src/scss/base/_globals.scss
+++ b/src/scss/base/_globals.scss
@@ -366,3 +366,14 @@ a {
         }
     }
 }
+
+.vtr__loading {
+    padding: size(20) 0;
+    img, svg {
+        width: size(90);
+        margin: 0 auto;
+        @include maxw($mq-md) {
+            width: size(70);
+        }
+    }
+}
