add rating plugin

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -17,6 +17,7 @@ $gorditaRegular: "Gordita-Regular", sans-serif;
     --white-03:  rgba(255, 255, 255, 0.3);
     --white-02:  rgba(255, 255, 255, 0.2);
     --black: #000;
+    --black-05:  rgba(0, 0, 0, 0.5);
     --black-06:  rgba(0, 0, 0, 0.3);
     --brandPrimary: #330D69;
     --brandSecondary: #30C9CD;
