add scroll height

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -14,6 +14,7 @@ $gorditaRegular: "Gordita-Regular", sans-serif;
     --white: #fff;
     --white-08:  rgba(255, 255, 255, 0.8);
     --white-06:  rgba(255, 255, 255, 0.6);
+    --white-005:  rgba(255, 255, 255, 0.05);
     --white-03:  rgba(255, 255, 255, 0.3);
     --white-02:  rgba(255, 255, 255, 0.2);
     --black: #000;
