--- a/src/scss/base/_helpers.scss
+++ b/src/scss/base/_helpers.scss
@@ -29,23 +29,9 @@
     padding: size(15);
     border-radius: size(15);
     overflow: hidden;
+    background: var(--white-005) 0% 0% no-repeat;
     @include maxw($mq-md) {
         padding: 0;
-    }
-    &:after {
-        content:"";
-        display: block;
-        width: 100%;
-        height: 100%;
-        background: #FFFFFF 0% 0% no-repeat ;
-        border: 1px solid #707070;
-        position: absolute;
-        top: 0;
-        left: 0;
-        opacity: 0.05;
-        @include maxw($mq-md) {
-            content: none;
-        }
     }
 }
 
