--- a/src/scss/base/_globals.scss
+++ b/src/scss/base/_globals.scss
@@ -378,6 +378,7 @@ a {
 
 .vtr__loading {
     padding: size(20) 0;
+    display: none;
     img, svg {
         width: size(90);
         margin: 0 auto;
