--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -7,7 +7,7 @@
         width: 100%;
         height: 100%;
         border: 0;
-        filter: grayscale(1);
+        /*filter: grayscale(1);*/
     }
     &:after {
         content: "";
@@ -17,7 +17,7 @@
         width: 100%;
         height: 100%;
         display: block;
-        background: transparent linear-gradient(180deg,var(--brandPrimary),var(--brandSecondary)) 0 0;
+        /*background: transparent linear-gradient(180deg,var(--brandPrimary),var(--brandSecondary)) 0 0;*/
         mix-blend-mode: lighten;
     }
     &__content {
