--- a/src/scss/pages/_tanks.scss
+++ b/src/scss/pages/_tanks.scss
@@ -1,13 +1,13 @@
 .vtr__thanks {
     min-height: 100vh;
     position: relative;
-    padding: size(30) size(20);
+    padding: size(120) size(20) size(50);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     @include maxw($mq-md) {
-        padding: size(50) size(20);
+        padding: size(80) size(20) size(50);
     }
     &__content {
         position: relative;
