on change button controls

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -51,6 +51,7 @@
         }
         img {
             width: size(30);
+            max-height: size(25);
         }
         .control-play {
             img {
