--- a/src/scss/pages/_tanks.scss
+++ b/src/scss/pages/_tanks.scss
@@ -65,7 +65,7 @@
                 }
             }
             .image {
-                border-radius: size(10);
+                /*border-radius: size(10);*/
                 overflow: hidden;
                 & > img {
                     width: 100%;
