--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,6 +1,7 @@
 .vtr__video {
     height: 100vh;
     position: relative;
+    background-color: #000000;
     iframe,
     video {
         display: block;
@@ -99,7 +100,7 @@
     .vtr__grid {
         max-width: size(768);
         .image {
-            border-radius: size(15);
+            /*border-radius: size(15);*/
             overflow: hidden;
         }
     }
@@ -316,4 +317,21 @@
     margin-top: 5px;
     color: #b1a4a4;
     display: none;
+}
+
+.card__spotify{
+    width: 80%;
+    background: #000000;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    margin-top: 15px;
+    border-radius: 0.625rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+.card__spotify img{
+    width: 80px;
+    margin: 0 auto;
 }
