--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1379,11 +1379,13 @@ a {
 }
 .vtr__video__content {
   position: absolute;
-  top: 50%;
+  /*top: 50%;*/
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   z-index: 1;
+  top: unset;
+  bottom: 0;
 }
 .vtr__video__content img {
   width: 15.625rem;
